# libonvif

./: .gitignore  README.md
Discovery_example/libonvifTest/: CMakeLists.txt  libonvif_vc64.rar  main.cpp  onvif-util.cpp
Discovery_example/libonvifTest/libonvif_vc64/lib/: onvif.lib
assets/scripts/: compile.bat
kankakee/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
kankakee/include/: Broadcaster.h  Client.h  Listener.h  MacServer.h  Server.h  WinClient.h  WinListener.h  WinServer.h
kankakee/src/: kankakee.cpp
libavio/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
libavio/cmake/: FindFFmpeg.cmake  FindSDL2.cmake
libavio/include/: Audio.hpp  Decoder.hpp  Display.hpp  Drain.hpp  Exception.hpp  Filter.hpp  Frame.hpp  Packet.hpp  Player.hpp  Queue.hpp  Reader.hpp  Writer.hpp
libavio/src/: avio.cpp
libonvif/: CMakeLists.txt  pyproject.toml
libonvif/src/: onvif.c  onvif.cpp
onvif-gui/: README.md  pyproject.toml  setup.py
onvif-gui/onvif_gui/: main.py
onvif-util/src/: onvif-util.cpp
